--- a/Testwalletconnect.html
+++ b/Testwalletconnect.html
@@ -1,98 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>GMbandit • WalletConnect Test</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <style>
-    body {
-      background: linear-gradient(180deg, #1E3A8A 0%, #60A5FA 50%, #ffffff 100%);
-      font-family: system-ui, Arial;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      color: #111;
-    }
-    h1 { margin-bottom: 12px; }
-    p { color: #374151; font-size: 14px; max-width: 400px; }
-    button {
-      background: #2563eb;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: 600;
-      margin-top: 18px;
-    }
-    button:hover { background: #1d4ed8; }
-    #status { margin-top: 20px; font-size: 15px; }
-  </style>
-
-  <!-- ✅ CDN versi browser-ready WalletConnect SignClient -->
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/sign-client@2.10.6/dist/index.min.js"></script>
-
-  <!-- ✅ QR modal library -->
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/qrcode-modal@2.1.2/dist/index.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>WalletConnect Test • GMbandit</title>
 </head>
+<body style="text-align:center;font-family:Arial;">
+  <h2>🔗 WalletConnect Test</h2>
+  <button id="connectBtn" style="padding:12px 18px;border:none;border-radius:8px;background:#2962ff;color:white;font-size:16px;cursor:pointer;">Connect Wallet</button>
+  <pre id="result" style="margin-top:18px;text-align:left;display:inline-block;background:#f2f2f2;padding:14px;border-radius:8px;width:300px;white-space:pre-wrap;"></pre>
 
-<body>
-  <h1>GMbandit WalletConnect v2</h1>
-  <p>Test QR connection using your Reown projectId.<br/>Works with MetaMask, OKX, or Bitget mobile wallets.</p>
-  <button id="connectBtn">Connect Wallet</button>
-  <div id="status"></div>
+  <script type="module">
+    import { initWallet } from "./scripts/walletHybrid.js";
+    const { connect } = await initWallet();
 
-  <script>
-    const projectId = "5194488ab401df6dd9c95f1e360d29b4";
-    const status = document.getElementById("status");
-    const btn = document.getElementById("connectBtn");
-
-    btn.onclick = async () => {
+    document.getElementById("connectBtn").onclick = async () => {
+      const el = document.getElementById("result");
+      el.textContent = "⏳ Connecting...";
       try {
-        status.textContent = "⏳ Initializing WalletConnect...";
-        const signClient = await window.WalletConnectSignClient.init({
-          projectId,
-          metadata: {
-            name: "GMbandit",
-            description: "Onchain Rituals on Base",
-            url: "https://gm-bandit.vercel.app",
-            icons: ["https://gm-bandit.vercel.app/assets/gmbandit.jpg"],
-          },
-        });
-
-        console.log("✅ SignClient initialized:", signClient);
-
-        // Buat pairings baru (QR)
-        const { uri, approval } = await signClient.connect({
-          requiredNamespaces: {
-            eip155: {
-              methods: ["eth_sendTransaction", "personal_sign"],
-              chains: ["eip155:8453"], // Base chain
-              events: ["chainChanged", "accountsChanged"],
-            },
-          },
-        });
-
-        if (uri) {
-          console.log("QR URI:", uri);
-          window.WalletConnectQRCodeModal.open(uri, () => {
-            console.log("QR modal closed");
-          });
-        }
-
-        const session = await approval();
-        window.WalletConnectQRCodeModal.close();
-
-        status.textContent = "✅ Connected: " + session.namespaces.eip155.accounts[0];
-        console.log("Session:", session);
-
+        const res = await connect();
+        el.textContent = `✅ Connected!\nAddress: ${res.account}\nType: ${res.type}`;
       } catch (err) {
-        console.error(err);
-        status.textContent = "❌ " + (err.message || "Connection failed");
+        el.textContent = `❌ ${err.message}`;
       }
     };
   </script>
