--- a/Testwalletconnect.html
+++ b/Testwalletconnect.html
@@ -2,25 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>WalletConnect Test • GMbandit</title>
-</head>
-<body style="text-align:center;font-family:Arial;">
-  <h2>🔗 WalletConnect Test</h2>
-  <button id="connectBtn" style="padding:12px 18px;border:none;border-radius:8px;background:#2962ff;color:white;font-size:16px;cursor:pointer;">Connect Wallet</button>
-  <pre id="result" style="margin-top:18px;text-align:left;display:inline-block;background:#f2f2f2;padding:14px;border-radius:8px;width:300px;white-space:pre-wrap;"></pre>
+  <title>WalletConnect v3 • GMbandit Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #ffffff, #b3e5fc);
+      text-align: center;
+      padding: 40px;
+      color: #000;
+    }
+    button {
+      background: #2962ff;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      padding: 14px 20px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    pre {
+      background: #f5f5f5;
+      border-radius: 8px;
+      padding: 12px;
+      display: inline-block;
+      text-align: left;
+      width: 320px;
+      margin-top: 20px;
+    }
+  </style>
 
-  <script type="module">
-    import { initWallet } from "./scripts/walletHybrid.js";
-    const { connect } = await initWallet();
+  <!-- WalletConnect SDK -->
+  <script src="https://unpkg.com/@walletconnect/modal@3.1.2/dist/index.umd.js"></script>
+  <!-- ethers v6 (bisa v5 juga, tapi v6 lebih modern) -->
+  <script src="https://cdn.jsdelivr.net/npm/ethers@6.7.1/dist/ethers.umd.min.js"></script>
+</head>
+
+<body>
+  <h2>🔗 WalletConnect v3 Test</h2>
+  <p>Project ID: <b>5194488ab401df6dd9c95f1e360d29b4</b></p>
+  <button id="connectBtn">Connect Wallet</button>
+  <pre id="result">Not connected</pre>
+
+  <script>
+    const PROJECT_ID = "5194488ab401df6dd9c95f1e360d29b4";
+    const BASE_RPC = "https://mainnet.base.org";
+    const CHAIN_ID = "eip155:8453"; // Base mainnet chainId format
+
+    const wc = new window.WalletConnectModal.default({
+      projectId: PROJECT_ID,
+      themeMode: "light",
+      metadata: {
+        name: "GMbandit WalletConnect Test",
+        description: "Testing connection via WalletConnect v3",
+        url: "https://gmbandit.vercel.app",
+        icons: ["https://gmbandit.vercel.app/icon.png"],
+      },
+    });
 
     document.getElementById("connectBtn").onclick = async () => {
-      const el = document.getElementById("result");
-      el.textContent = "⏳ Connecting...";
+      const log = (msg) => (document.getElementById("result").textContent = msg);
+      log("⏳ Opening WalletConnect modal...");
+
       try {
-        const res = await connect();
-        el.textContent = `✅ Connected!\nAddress: ${res.account}\nType: ${res.type}`;
+        const session = await wc.openModal({
+          requiredNamespaces: {
+            eip155: {
+              methods: ["eth_sendTransaction", "personal_sign", "eth_signTypedData"],
+              chains: [CHAIN_ID],
+              events: ["chainChanged", "accountsChanged"],
+            },
+          },
+        });
+
+        console.log("Session:", session);
+        const accounts = session.namespaces?.eip155?.accounts || [];
+        if (!accounts.length) throw new Error("No wallet connected");
+
+        const address = accounts[0].split(":")[2];
+        log(`✅ Connected!\nAddress: ${address}\nChain: Base (8453)`);
+
       } catch (err) {
-        el.textContent = `❌ ${err.message}`;
+        console.error(err);
+        log("❌ Connection failed:\n" + (err.message || err));
       }
     };
   </script>
