--- a/index.html
+++ b/index.html
@@ -61,11 +61,6 @@
       <!-- ✅ BANNER -->
   <img src="assets/gmbandit.jpg" alt="GMbandit Banner" style="max-width:100%;border-radius:12px;margin-bottom:12px" />
 
-  <!-- ✅ HUMOR TEXT -->
-  <div style="color:#1e3a8a;font-size:14px;margin-bottom:28px">
-     This ritual costs only <strong>0.00000033 ETH</strong>.<br/>
-     Cheaper than your morning coffee, but blessed by the onchain gods
-   </div>
     <h1>GM Ritual Dashboard</h1>
     <div class="sub">Connect → Choose Ritual → Confirm TX (Base Chain 8453)</div>
 
@@ -282,7 +277,7 @@
   👉 Follow us: 
   <a href="https://warpcast.com/banditi" target="_blank" style="color:#7aa2ff">Farcaster</a> • 
   <a href="https://x.com/Alidepok1" target="_blank" style="color:#7aa2ff">X (Twitter)</a> • 
-  <a href="https://github.com/beny25/GMbandit" target="_blank" style="color:#7aa2ff">GitHub</a>
+  <a href="https://github.com/beny25" target="_blank" style="color:#7aa2ff">GitHub</a>
   
   <br/><br/>
   <span style="font-size:12px;color:#5c677a;">© 2025 GMbandit on Base → Open Source & Ritual Ready</span>
