--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
       <!-- ✅ BANNER -->
   <img src="assets/gmbandit.jpg" alt="GMbandit Banner" style="max-width:100%;border-radius:12px;margin-bottom:12px" />
 
-    <h1>GM Ritual Dashboard</h1>
-    <div class="sub">Connect → Choose Ritual → Confirm TX (Base Chain 8453)</div>
+   <div style="font-size:12px; opacity:0.6; margin-bottom:12px;">
+  Rituals on Base • Fee: 0.00000033 ETH
+</div>
 
     <div class="card">
 
