--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 })();
 </script>
   
-<footer style="text-align:center; font-size:14px; color:#9aa4b2; padding-bottom:32px">
+<footer style="text-align:center; font-size:14px; color:#9aa4b2; margin-top:12px; padding-bottom:24px">
   🟦 Built with love by <strong>Bandit Skuad</strong> <br/>
   Contract: 
   <a href="https://basescan.org/address/0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A" style="color:#7aa2ff" target="_blank">
