--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       color:#cfe0ff;padding:10px 12px;border-radius:12px;font-size:14px
     }
     .chip .dot{width:8px;height:8px;border-radius:999px;background:#16a34a;display:inline-block}
-    .foot{color:var(--muted);font-size:13px;margin-top:22px}
+    .foot{color:var(--muted);font-size:13px;margin-top:12px}
     a.link{color:#7aa2ff;text-decoration:none}
   </style>
 
@@ -263,7 +263,7 @@
 })();
 </script>
   
-<footer style="text-align:center; font-size:14px; color:#9aa4b2; margin-top:6px; padding-bottom:24px">
+<footer style="text-align:center; font-size:14px; color:#9aa4b2; padding-bottom:24px">
   🟦 Built with love by <strong>Bandit Skuad</strong> <br/>
   Contract: 
   <a href="https://basescan.org/address/0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A" style="color:#7aa2ff" target="_blank">
