--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           params:[{
             chainId: BASE_CHAIN,
             chainName:"Base",
-            rpcUrls:["https://mainnet.base.org"],
+            rpcUrls:["https://developer-access-mainnet.base.org"],
             nativeCurrency:{name:"Base Ether",symbol:"ETH",decimals:18},
             blockExplorerUrls:["https://basescan.org"]
           }]
