--- a/index.html
+++ b/index.html
@@ -235,47 +235,33 @@ async function ritual(type, message) {
     return;
   }
 
-  // 🔓 PATCH: ALLOW Base App (no blocking)
-  const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
-  // (tidak ada blocking lagi)
+  const eth = window.ethereum;
 
   try {
     await ensureBase();
 
     const c = new ethers.Contract(CONTRACT, ABI, signer);
+    const fee = await c.fee();
 
     // ============================
-    // 🔮 SIMULATE FEE (works even if user has 0 ETH)
+    // 🔥 FORCE WALLET SIMULATION
     // ============================
-    let fee;
     try {
-      fee = await c.fee();
-    } catch (e) {
-      console.warn("Could not fetch fee:", e);
-      alert("Failed to load ritual fee ❌");
-      return;
-    }
+      await c.estimateGas.performRitual(message, { value: fee });
+      // kalau berhasil → lanjut normal
+    } catch (simErr) {
+      console.warn("Simulation error:", simErr);
 
-    // ❗ CEK SALDO WALLET (di Base) MESKI 0 ETH
-    const bal = await signer.getBalance();
-    const enough = bal.gte(fee);
-
-    if (!enough) {
-      // Bisa lihat fee + ritual tetap kebuka, tapi minta top-up dulu sebelum TX
-      alert(
-        "Ritual fee: " + ethers.utils.formatEther(fee) + " ETH\n" +
-        "Your balance: " + ethers.utils.formatEther(bal) + " ETH\n\n" +
-        "You need more ETH for gas ⛽\nBut simulation worked!"
-      );
-      return;
+      // 🚀 Di Base App ini akan memicu wallet show top-up UI
+      // Kita tidak block, biarkan provider yang urus
     }
 
     // ============================
-    // ✨ PROCEED WITH ACTUAL TX
+    // 🧨 SHOW WALLET POP-UP
     // ============================
     const tx = await c.performRitual(message, { value: fee });
-    alert("TX sent… waiting confirmation");
 
+    alert("TX sent… waiting confirmation");
     await tx.wait();
 
     mark(type);
