--- a/index.html
+++ b/index.html
@@ -100,6 +100,34 @@
   ];
   const BASE_CHAIN = "0x2105";
 
+  // ===== Provider Resolver (FINAL FIX for Base App) =====
+  function getEth() {
+    // Standard provider
+    if (window.ethereum?.isMetaMask || window.ethereum?.isOkxWallet || window.ethereum?.isBitgetWallet) {
+      return window.ethereum;
+    }
+
+    // Multi-provider (Coinbase / Base App)
+    if (window.ethereum?.providers?.length > 0) {
+      const p = window.ethereum.providers.find(p =>
+        p.isCoinbaseWallet ||
+        p.isBaseWallet ||
+        p.isSmartAccount ||
+        p.isCoinbaseBrowser ||
+        p.isCoinbaseExtension
+      );
+      return p || window.ethereum.providers[0];
+    }
+
+    // Direct injections
+    if (window.coinbaseWalletExtension) return window.coinbaseWalletExtension;
+    if (window.okxwallet) return window.okxwallet;
+    if (window.bitgetwallet) return window.bitgetwallet;
+    if (window.bitkeep?.ethereum) return window.bitkeep.ethereum;
+
+    return window.ethereum || null;
+  }
+
   // ===== UI helpers =======
   const $ = (id)=>document.getElementById(id);
   const connectBtn = $("connectBtn");
@@ -134,11 +162,8 @@
     setDisabled(sleepBtn,true);
   }
 
-  // ========= Cooldown (per tombol per hari) =========
-
-  function key(type){
-    return "cool_"+type+"_"+account;
-  }
+  // ========= Cooldown per hari =========
+  function key(type){ return "cool_"+type+"_"+account; }
 
   function checkCooldown(type){
     if (!account) return true;
@@ -161,12 +186,12 @@
 
   // ========= Chain switch ==========
   async function ensureBase(){
-    const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
-    if (!eth) throw new Error("No wallet detected. Please use MetaMask/OKX/Bitget dApp browser.");
+    const eth = getEth();
+    if (!eth) throw new Error("No wallet detected. Please use MetaMask/OKX/Bitget.");
+
     const chainId = await eth.request({method:"eth_chainId"});
     if (chainId === BASE_CHAIN) return;
 
-    // Try switch
     try {
       await eth.request({
         method:"wallet_switchEthereumChain",
@@ -193,8 +218,8 @@
   // ========= Connect ==========
   async function connect(){
     try{
-      const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
-      if (!eth){ alert("Wallet not detected. Use MetaMask/OKX/Bitget dApp browser."); return; }
+      const eth = getEth();
+      if (!eth){ alert("Wallet not detected."); return; }
 
       await ensureBase();
 
@@ -211,8 +236,9 @@
         addrShort.textContent = short(account);
         refreshButtons();
       });
+
       eth.on?.("chainChanged",(c)=>{
-        if(c!==BASE_CHAIN){ showDisconnected(); }
+        if(c!==BASE_CHAIN) showDisconnected();
       });
 
     }catch(e){
@@ -228,60 +254,58 @@
     showDisconnected();
   }
 
-// ========= Ritual ==========
-async function ritual(type, message) {
-  if (checkCooldown(type)) {
-    alert("You already did " + type + " today ✅");
-    return;
-  }
-
-  try {
-    await ensureBase();
-
-    const c = new ethers.Contract(CONTRACT, ABI, signer);
-    const fee = await c.fee();
-
-    // ===== Try estimate (MUNGKIN gagal) =====
-    let gasLimit;
-    try {
-      gasLimit = await c.estimateGas.performRitual(message, { value: fee });
-    } catch (e) {
-      console.warn("estimateGas failed, fallback to manual gas limit");
-      gasLimit = ethers.BigNumber.from("200000");
+  // ========= Ritual (FINAL FIX VERSION) ==========
+  async function ritual(type, message) {
+    if (checkCooldown(type)) {
+      alert("You already did " + type + " today ✅");
+      return;
     }
 
-    // ============================
-    // 🔥 FORCE METAMASK POPUP
-    // ============================
-    const tx = await signer.sendTransaction({
-      to: CONTRACT,
-      value: fee,
-      data: c.interface.encodeFunctionData("performRitual", [message]),
-      gasLimit
-    });
+    try {
+      await ensureBase();
 
-    alert("TX sent… waiting confirmation");
-    await tx.wait();
+      const c = new ethers.Contract(CONTRACT, ABI, signer);
+      const fee = await c.fee();
 
-    mark(type);
-    refreshButtons();
-    alert(type + " ritual complete ✅");
+      // ======== Try estimation (may fail silently) ========
+      let gasLimit;
+      try {
+        gasLimit = await c.estimateGas.performRitual(message, { value: fee });
+      } catch (e) {
+        console.warn("estimateGas failed → fallback gas");
+        gasLimit = ethers.BigNumber.from("200000");
+      }
 
-  } catch (err) {
-    console.error(err);
-    alert("Ritual failed ❌");
+      // ============================
+      // 🔥 FORCE WALLET POP-UP
+      // ============================
+      const tx = await signer.sendTransaction({
+        to: CONTRACT,
+        value: fee,
+        data: c.interface.encodeFunctionData("performRitual", [message]),
+        gasLimit
+      });
+
+      alert("TX sent… waiting confirmation");
+      await tx.wait();
+
+      mark(type);
+      refreshButtons();
+      alert(type + " ritual complete ✅");
+
+    } catch (err) {
+      console.error(err);
+      alert("Ritual failed ❌");
+    }
   }
-}
 
-
-  // ===== Bind =======
+  // ===== Bind buttons =======
   connectBtn.onclick = connect;
   disconnectBtn.onclick = disconnect;
   gmBtn.onclick = ()=>ritual("GM","GM ⚡");
   gnBtn.onclick = ()=>ritual("GN","GN 🌙");
   sleepBtn.onclick = ()=>ritual("SLEEP","GoSleep 😴");
 
-  // initial
   showDisconnected();
 })();
 </script>
