--- a/index.html
+++ b/index.html
@@ -100,34 +100,6 @@
   ];
   const BASE_CHAIN = "0x2105";
 
-  // ===== Provider Resolver (FINAL FIX for Base App) =====
-  function getEth() {
-    // Standard provider
-    if (window.ethereum?.isMetaMask || window.ethereum?.isOkxWallet || window.ethereum?.isBitgetWallet) {
-      return window.ethereum;
-    }
-
-    // Multi-provider (Coinbase / Base App)
-    if (window.ethereum?.providers?.length > 0) {
-      const p = window.ethereum.providers.find(p =>
-        p.isCoinbaseWallet ||
-        p.isBaseWallet ||
-        p.isSmartAccount ||
-        p.isCoinbaseBrowser ||
-        p.isCoinbaseExtension
-      );
-      return p || window.ethereum.providers[0];
-    }
-
-    // Direct injections
-    if (window.coinbaseWalletExtension) return window.coinbaseWalletExtension;
-    if (window.okxwallet) return window.okxwallet;
-    if (window.bitgetwallet) return window.bitgetwallet;
-    if (window.bitkeep?.ethereum) return window.bitkeep.ethereum;
-
-    return window.ethereum || null;
-  }
-
   // ===== UI helpers =======
   const $ = (id)=>document.getElementById(id);
   const connectBtn = $("connectBtn");
@@ -162,8 +134,11 @@
     setDisabled(sleepBtn,true);
   }
 
-  // ========= Cooldown per hari =========
-  function key(type){ return "cool_"+type+"_"+account; }
+  // ========= Cooldown (per tombol per hari) =========
+
+  function key(type){
+    return "cool_"+type+"_"+account;
+  }
 
   function checkCooldown(type){
     if (!account) return true;
@@ -186,12 +161,12 @@
 
   // ========= Chain switch ==========
   async function ensureBase(){
-    const eth = getEth();
-    if (!eth) throw new Error("No wallet detected. Please use MetaMask/OKX/Bitget.");
-
+    const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
+    if (!eth) throw new Error("No wallet detected. Please use MetaMask/OKX/Bitget dApp browser.");
     const chainId = await eth.request({method:"eth_chainId"});
     if (chainId === BASE_CHAIN) return;
 
+    // Try switch
     try {
       await eth.request({
         method:"wallet_switchEthereumChain",
@@ -218,8 +193,8 @@
   // ========= Connect ==========
   async function connect(){
     try{
-      const eth = getEth();
-      if (!eth){ alert("Wallet not detected."); return; }
+      const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
+      if (!eth){ alert("Wallet not detected. Use MetaMask/OKX/Bitget dApp browser."); return; }
 
       await ensureBase();
 
@@ -236,9 +211,8 @@
         addrShort.textContent = short(account);
         refreshButtons();
       });
-
       eth.on?.("chainChanged",(c)=>{
-        if(c!==BASE_CHAIN) showDisconnected();
+        if(c!==BASE_CHAIN){ showDisconnected(); }
       });
 
     }catch(e){
@@ -254,7 +228,7 @@
     showDisconnected();
   }
 
-  // ========= Ritual (FINAL FIX VERSION) ==========
+// ========= Ritual (FINAL FIX VERSION) ==========
   async function ritual(type, message) {
     if (checkCooldown(type)) {
       alert("You already did " + type + " today ✅");
@@ -299,13 +273,14 @@
     }
   }
 
-  // ===== Bind buttons =======
+  // ===== Bind =======
   connectBtn.onclick = connect;
   disconnectBtn.onclick = disconnect;
   gmBtn.onclick = ()=>ritual("GM","GM ⚡");
   gnBtn.onclick = ()=>ritual("GN","GN 🌙");
   sleepBtn.onclick = ()=>ritual("SLEEP","GoSleep 😴");
 
+  // initial
   showDisconnected();
 })();
 </script>
