--- a/index.html
+++ b/index.html
@@ -230,49 +230,42 @@
 
 // ========= Ritual (FINAL FIX VERSION) ==========
   async function ritual(type, message) {
-    if (checkCooldown(type)) {
-      alert("You already did " + type + " today ✅");
-      return;
-    }
-
-    try {
-      await ensureBase();
-
-      const c = new ethers.Contract(CONTRACT, ABI, signer);
-      const fee = await c.fee();
-
-      // ======== Try estimation (may fail silently) ========
-      let gasLimit;
-      try {
-        gasLimit = await c.estimateGas.performRitual(message, { value: fee });
-      } catch (e) {
-        console.warn("estimateGas failed → fallback gas");
-        gasLimit = ethers.BigNumber.from("200000");
-      }
-
-      // ============================
-      // 🔥 FORCE WALLET POP-UP
-      // ============================
-      const tx = await signer.sendTransaction({
-        to: CONTRACT,
-        value: fee,
-        data: c.interface.encodeFunctionData("performRitual", [message]),
-        gasLimit
-      });
-
-      alert("TX sent… waiting confirmation");
-      await tx.wait();
-
-      mark(type);
-      refreshButtons();
-      alert(type + " ritual complete ✅");
-
-    } catch (err) {
-      console.error(err);
-      alert("Ritual failed ❌");
-    }
+  if (checkCooldown(type)) {
+    alert("You already did " + type + " today ✅");
+    return;
   }
 
+  try {
+    await ensureBase();
+
+    const c = new ethers.Contract(CONTRACT, ABI, signer);
+    const fee = await c.fee();
+
+    // Try local estimation (safe)
+    let overrides = {};
+    try {
+      const gas = await c.estimateGas.performRitual(message, { value: fee });
+      overrides = { value: fee, gasLimit: gas };
+    } catch {
+      overrides = { value: fee }; // smart wallet prefer simpler call
+    }
+
+    // 🟦 MAIN TX (SAFE FOR BASE APP)
+    const tx = await c.performRitual(message, overrides);
+
+    alert("TX sent… waiting confirmation");
+    await tx.wait();
+
+    mark(type);
+    refreshButtons();
+    alert(type + " ritual complete ✅");
+
+  } catch (err) {
+    console.error(err);
+    alert("Ritual failed ❌");
+  }
+  }
+  
   // ===== Bind =======
   connectBtn.onclick = connect;
   disconnectBtn.onclick = disconnect;
