--- a/index.html
+++ b/index.html
@@ -241,14 +241,16 @@
     const c = new ethers.Contract(CONTRACT, ABI, signer);
     const fee = await c.fee();
 
+    // Try local estimation (safe)
     let overrides = {};
     try {
       const gas = await c.estimateGas.performRitual(message, { value: fee });
       overrides = { value: fee, gasLimit: gas };
     } catch {
-      overrides = { value: fee };
+      overrides = { value: fee }; // smart wallet prefer simpler call
     }
 
+    // 🟦 MAIN TX (SAFE FOR BASE APP)
     const tx = await c.performRitual(message, overrides);
 
     alert("TX sent… waiting confirmation");
@@ -259,23 +261,10 @@
     alert(type + " ritual complete ✅");
 
   } catch (err) {
-
-    console.error("TX ERROR:", err);
-
-    // === wallet simulation only, zero balance ===
-    if (
-      err?.message?.includes("insufficient funds") ||
-      err?.message?.includes("gas required exceeds allowance") ||
-      err?.message?.includes("cannot estimate gas") ||
-      err?.code === "INSUFFICIENT_FUNDS"
-    ) {
-      // wallet already shows top-up message
-      return;
-    }
-
+    console.error(err);
     alert("Ritual failed ❌");
   }
-  }
+}
   
   // ===== Bind =======
   connectBtn.onclick = connect;
