--- a/index.html
+++ b/index.html
@@ -238,20 +238,55 @@
   try {
     await ensureBase();
 
+    const eth = getEth();
     const c = new ethers.Contract(CONTRACT, ABI, signer);
     const fee = await c.fee();
 
-    // Try local estimation (safe)
-    let overrides = {};
-    try {
-      const gas = await c.estimateGas.performRitual(message, { value: fee });
-      overrides = { value: fee, gasLimit: gas };
-    } catch {
-      overrides = { value: fee }; // smart wallet prefer simpler call
+    // Wallet type detection
+    const isSmart = eth?.isSmartAccount || eth?.isBaseWallet || eth?.isCoinbaseWallet;
+
+    // ================================
+    // 🟦 CASE 1: BASE SMART WALLET
+    // ================================
+    if (isSmart) {
+      console.log("Using SMART WALLET flow");
+
+      let overrides = {};
+      try {
+        const gas = await c.estimateGas.performRitual(message, { value: fee });
+        overrides = { value: fee, gasLimit: gas };
+      } catch {
+        overrides = { value: fee };
+      }
+
+      const tx = await c.performRitual(message, overrides);
+      alert("TX sent… waiting confirmation (Base App)");
+      await tx.wait();
+
+      mark(type);
+      refreshButtons();
+      alert(type + " ritual complete ✅");
+      return;
     }
 
-    // 🟦 MAIN TX (SAFE FOR BASE APP)
-    const tx = await c.performRitual(message, overrides);
+    // ================================
+    // 🟩 CASE 2: EOA WALLETS (MetaMask, OKX, Bitget)
+    // ================================
+    console.log("Using RAW EOA flow");
+
+    let gasLimit;
+    try {
+      gasLimit = await c.estimateGas.performRitual(message, { value: fee });
+    } catch {
+      gasLimit = ethers.BigNumber.from("200000"); // fallback safe
+    }
+
+    const tx = await signer.sendTransaction({
+      to: CONTRACT,
+      value: fee,
+      data: c.interface.encodeFunctionData("performRitual", [message]),
+      gasLimit
+    });
 
     alert("TX sent… waiting confirmation");
     await tx.wait();
@@ -264,7 +299,7 @@
     console.error(err);
     alert("Ritual failed ❌");
   }
-}
+  }
   
   // ===== Bind =======
   connectBtn.onclick = connect;
